--- a/templates/posts/posts.html
+++ b/templates/posts/posts.html
@@ -1,39 +1,27 @@
 {% extends 'layouts/index.html' %}
+{% load static %}
+
+{% block head %}
+    <link rel="stylesheet" href="{% static 'posts.css' %}">
+{% endblock %}
 
 {% block content %}
-    <style type="text/css">
-        .posts {
-            display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        width: 80%;
-        margin-left: 10%;
-    }
-    .post_block {
-        margin: 20px;
-        transition: all 0.3s;
-    }
-    .post_block:hover {
-        transform: scale(1.1);
-        cursor: pointer;
-    }
-
-    .post_image{
-        width: 100%;
-    }
-</style>
     <div class="posts">
         {% for post in posts %}
             <div class="post_block">
                 <div class="card" style="width: 18rem;">
                     <div class="card-body">
+                        {% if post.image %}
                         <img class="post_image" src="/media/{{ post.image }}" alt="">
+                    {% else %}
+                        <img class="post_image" src="{% static 'img.webp' %}" alt="">
+                    {% endif %}
                         <h5 class="card-title">{{ post.title }}</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Rate: {{ post.rate }}</h6>
                         {% for hashtag in post.hashtags %}
                         <p>{{ hashtag.title }}</p>
                          {% endfor %}
-                        <a href="#" class="card-link">More</a>
+                        <a href="/posts/{{ post.id }}" class="card-link">More</a>
                         </div>
                 </div>
             </div>
