--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -32,7 +32,7 @@
           <a class="nav-link" href="#">Pricing</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+          <a class="nav-link" href="/posts/create">Create Post</a>
         </li>
       </ul>
     </div>
